--- a/frontend-portfolio-angular/src/app/components/detail/detail.component.html
+++ b/frontend-portfolio-angular/src/app/components/detail/detail.component.html
@@ -8,10 +8,15 @@
         <h3>{{project.description}}</h3>
         <p>{{project.category}}</p>
         <p>{{project.langs}}</p>
-
-        <p>
+        <p *ngIf="confirm == false">
             <a [routerLink]="['/editar-proyecto', project._id]" class="button-edit">Editar</a>
-            <a (click)="deleteProject(project._id)" class="button-delete">Borrar</a>
+            <a (click)="setConfirm(true)" class="button-delete">Borrar</a>
+        </p>
+
+        <p *ngIf="confirm == true">
+            <span class="confirm">Estas seguro que quieres eliminar el proyecto?</span>
+            <a (click)="setConfirm(false)" class="button-edit">Cancelar</a>
+            <a (click)="deleteProject(project._id)" class="button-delete">Eliminar definitivamente</a>
 
 
         </p>
