--- a/frontend-portfolio-angular/src/app/components/edit/edit.component.html
+++ b/frontend-portfolio-angular/src/app/components/edit/edit.component.html
@@ -2,7 +2,7 @@
     <h2>{{title}}</h2>
 
     <div class="message success" *ngIf="status == 'success'">
-        El proyecto se ha creado correctamente, puedes <a [routerLink]="['/proyecto', 'save_project._id']">Verlo aqui</a>
+        El proyecto se ha creado correctamente, puedes <a [routerLink]="['/proyecto', save_project._id]">Verlo aqui</a>
     </div>
 
     <div class="message failed" *ngIf="status == 'failed'">
