agregue un plugin al proyecto

--- a/frontend-portfolio-angular/src/app/app.component.html
+++ b/frontend-portfolio-angular/src/app/app.component.html
@@ -2,9 +2,9 @@
   <ul>
     <li><a [routerLink]="['/sobre-mi']"[routerLinkActive]="['actived']">Sobre mi</a></li>
     <li><a [routerLink]="['/proyectos']"[routerLinkActive]="['actived']">Proyectos</a></li>
-    <li id="logo"><a href="#">FG</a></li>
+    <li id="logo"><a>FG</a></li>
     <li><a [routerLink]="['/crear-proyecto']"[routerLinkActive]="['actived']">Crear Proyecto</a></li>
-    <li><a [routerLink]="['/contact']"[routerLinkActive]="['actived']">Contacto</a></li>
+    <li><a [routerLink]="['/contacto']"[routerLinkActive]="['actived']">Contacto</a></li>
   </ul>
 </header>
 <section id="content">
