--- a/frontend-portfolio-angular/src/app/components/contact/contact.component.html
+++ b/frontend-portfolio-angular/src/app/components/contact/contact.component.html
@@ -1,1 +1,7 @@
-<p>contact works!</p>
+<div class="container">
+    <div class="galeria">
+        <div class="image-container"><img src="assets/img/rubio(2).jpg" title="Funky roots" width="100%" height="auto"></div>
+        <div class="image-container"><img src="assets/img/rubio(3).jpg" title="The long and winding road" width="100%" height="auto"></div>
+        <div class="image-container"><img src="assets/img/rubio(4).jpg" title="Happy trees" width="100%" height="auto"></div>
+    </div>
+</div>
